--- a/.github/workflows/market_scheduler.yml
+++ b/.github/workflows/market_scheduler.yml
@@ -32,9 +32,16 @@ jobs:
         run: python trader_bot.py
 
       - name: Save News Memory
+        env:
+          # This token is automatically provided by GitHub, you don't need to create it
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name 'TraderBot'
           git config --global user.email 'bot@noreply.github.com'
+          
+          # Force the git command to use the token for authentication
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}
+          
           git add news_memory.json
           git commit -m "Update memory" || echo "No new trades"
           git push
