--- a/.github/workflows/market_scheduler.yml
+++ b/.github/workflows/market_scheduler.yml
@@ -1,21 +1,27 @@
 name: Market Hour AI Trader
 
+# --- THE FIX: Force GitHub to allow writing ---
+permissions:
+  contents: write
+
 on:
   schedule:
-    # OPTIMIZED: Runs every 12 minutes (Uses ~80% of daily GitHub quota)
-    # Market Hours: 09:30 AM to 04:18 PM IST
+    # Runs every 12 minutes during market hours
     - cron: '*/12 4-10 * * 1-5'
-  workflow_dispatch:
+  workflow_dispatch: # Manual Button
 
 jobs:
   trade-bot:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          # This ensures the git client is authenticated to push back later
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
@@ -24,24 +30,22 @@ jobs:
 
       - name: Run AI Trader
         env:
-          # MAPPING THE NEW SECRETS HERE:
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN2 }} 
+          # Using your NEW Keys as requested
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN2 }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY2 }}
-          # Keeping the chat ID the same (your personal ID)
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: python trader_bot.py
 
       - name: Save News Memory
-        env:
-          # This token is automatically provided by GitHub, you don't need to create it
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name 'TraderBot'
           git config --global user.email 'bot@noreply.github.com'
           
-          # Force the git command to use the token for authentication
-          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}
-          
+          # We check status first to see if file exists
           git add news_memory.json
-          git commit -m "Update memory" || echo "No new trades"
+          
+          # Only commit if there are changes (prevents errors)
+          git diff-index --quiet HEAD || git commit -m "Update memory"
+          
+          # Simple push (Authentication handled by the checkout step above)
           git push
